[package]
name = "json-rpc2"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"
description = "Simple, paragmatic JSON-RPC 2.0 implementation"
keywords = ["JSON", "RPC", "JSON-RPC"]

[dependencies]
thiserror = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
