[package]
name = "json-rpc2"
version = "0.4.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"
description = "Simple, robust and pragmatic JSON-RPC 2.0 implementation"
keywords = ["JSON", "RPC", "JSON-RPC"]
repository = "https://github.com/tmpfs/json-rpc2"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
thiserror = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
