[package]
name = "json-rpc2"
version = "0.9.5"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"
description = "Simple, robust and pragmatic JSON-RPC 2.0 implementation"
keywords = ["JSON", "RPC", "JSON-RPC"]
repository = "https://github.com/tmpfs/json-rpc2"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
thiserror = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
# Hack so we don't have to enabled features for `cargo test`
# See: https://github.com/rust-lang/cargo/issues/2911
json-rpc2 = { path = ".", features = ["async"] }

[features]
async = ["async-trait"]

[package.metadata.docs.rs]
features = ["async"]
